<resources>
    <string name="app_name">Ec Charter</string>
    <string name="history">History Report</string>
    <string name="report">Flight Report</string>

    <string name="insert_pin">Pin</string>
    <string name="btn_login">Log In</string>
    <string name="btn_create_report">New Report</string>
    <string name="btn_history">History</string>
    <string name="btn_logout">Log Out</string>
    <string name="btn_continue_report">Continue with report</string>
    <string name="customer">Customer</string>
    <string name="passengers">Passengers</string>
    <string name="aircraft">Aircraft</string>
    <string name="capitan">Captain</string>
    <string name="copilot">Copilot</string>
    <string name="date">Date</string>
    <string name="route">Route</string>
    <string name="gps_flight_time">GPS Flight Time</string>
    <string name="hour_initial">Hour Initial</string>
    <string name="hour_final">Hour Final</string>
    <string name="long_time">Log Time</string>
    <string name="btn_save">Save</string>
    <string name="btn_send">Send</string>
    <string name="remarks">Remarks</string>
    <string name="total">Total</string>
    <string name="description">Description</string>
    <string name="btn_add">Add</string>
    <string name="photo">Select A Method</string>
    <string name="gallery">Gallery</string>
    <string name="take_photo">Take a photo</string>
    <string name="preview">Preview</string>
    <string name="delete_picture">Remove Picture</string>
    <string name="combo_add">Add item</string>
    <string name="btn_cancel">Cancel</string>
    <string name="combo_title">New Item</string>
    <string name="btn_delete">Delete</string>
    <string name="alert_title">Confirm</string>
    <string name="new_expense">Expense</string>
    <string name="new_aircraft">Aircraft Report</string>
    <string name="new_plan">Fligth Plan</string>
    <string name="error_decimal">Field must have the format 0.0</string>
    <string name="resizing_imagen">Sending report to server</string>
    <string name="error_send_required">Required fields: Aircraft, Captain and Route</string>
    <string name="error_send_hours">Hour Final must be greater than Hour Initial</string>
    <string name="engine1">Engine 1</string>
    <string name="engine2">Engine 2</string>
    <string name="ltrs">liters</string>
    <string name="please_wait">Please wait a moment..</string>
    <string name="capitan_copilot">Captain / Copilot</string>
    <string name="settings">Settings</string>
    <string name="cockpi">Cockpit Split</string>
    <string name="empty">Empty Field</string>
    <string name="img_from_other_app">Don\'t not select images from another application that aren\'t native to the system</string>
    <string name="img_deleted">The image was not found on this device</string>
    <string name="code500">Server Error</string>
    <string name="code503">Server Down</string>
    <string name="code200">Success</string>report sent to the server
    <string name="successserver">Report sent to the server</string>
    <string name="synchronize_data">Synchronize data</string>
    <string name="send_error">Select how to send the report: mail, server</string>
    <string name="username">Username</string>
    <string name="error_connection">The report will be sent when there is an internet connection</string>
    <string name="current">$</string>
    <string name="loading">Loading..</string>
    <string name="select_from_gallery">_data IS NOT NULL) GROUP BY (bucket_display_name</string>
    <string name="select_from_album">bucket_display_name = \"%s\"</string>
    <string name="brand">Brand:</string>
    <string name="model">Model:</string>
    <string name="aircrafts">Aircrafts</string>
    <string name="not_aircrafts">There aren\'t aircraft to display</string>
    <string name="not_crews">There aren\'t crew to display</string>
    <string name="not_document">There aren\'t document to display</string>
    <string name="not_chat">There aren\'t chat to display</string>
    <string name="not_component">There aren\'t component to display</string>
    <string name="not_customers">There aren\'t customer to display</string>
    <string name="not_histories">There aren\'t report to display</string>
    <string name="search">Search</string>
    <string name="close_search">Close search</string>
    <string name="results">%d results.</string>
    <string name="presenter_local">presenter_local</string>
    <string name="presenter_server">presenter_server</string>
    <string name="not_history">There aren\'t report to synchronize</string>
    <string name="report_syc">%d reports found, want to synchronize?</string>
    <string name="syn_up">Sync up</string>
    <string name="syc_report_title">Synchronize Reports</string>
    <string name="draft">Draft</string>
    <string name="sent_to">Sent To</string>
    <string name="operations">Operations</string>
    <string name="maintenance">Maintenance</string>
    <string name="server">Server</string>
    <string name="swichOn">ON</string>
    <string name="swichOff">OFF</string>
    <string name="sent_to_server">SEND TO SERVER</string>
    <string name="send_to_mail">SEND TO MAIL</string>
    <string name="done">Done</string>
    <string name="update">Update</string>
    <string name="mandatary_description">Please insert a description</string>
    <string name="mandatary_route">Please insert a route</string>
    <string name="mandatary_total_description">Please insert a total and description</string>
    <string name="image_error">Error load this image</string>
    <string name="item">Item</string>
    <string name="position">Position</string>


</resources>
