<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorBlanco"
    app:cardCornerRadius="@dimen/card_corner_radius"
    app:cardElevation="@dimen/card_elevation"
    style="@style/Base.CardView">

    <LinearLayout

        android:layout_marginTop="@dimen/margin_vertical"
        android:layout_marginLeft="@dimen/margin_horizontal"
        android:layout_marginRight="@dimen/margin_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/sub_sub_titulo"
                    android:text="@string/customer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/history_customer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    style="@style/sub_sub_titulo"
                    android:text="@string/capitan"
                    android:layout_marginTop="@dimen/margin_top_init"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/history_capitan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/sub_sub_titulo"
                    android:text="@string/aircraft"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/history_aircraft"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    style="@style/sub_sub_titulo"
                    android:text="@string/copilot"
                    android:layout_marginTop="@dimen/margin_top_init"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/history_copilot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_marginTop="@dimen/toolbar_line_top"
            android:background="@color/colorNube"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/sentcontainer"
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            style="@style/sub_sub_titulo"
                            android:text="@string/sent_to"
                            android:layout_marginRight="@dimen/margin_top_init"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/sent_mail"
                            style="@style/resaltar2"
                            android:background="@drawable/rounded_operations"
                            android:text="@string/operations"
                            android:layout_marginRight="@dimen/margin_top_init"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/sent_mail_ope"
                            style="@style/resaltar4"
                            android:background="@drawable/rounded_maintenance"
                            android:text="@string/maintenance"
                            android:layout_marginRight="@dimen/margin_top_init"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/sent_server"
                            style="@style/resaltar3"
                            android:background="@drawable/rounded_server"
                            android:text="@string/server"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/history_date"
                            style="@style/sub_titulo"
                            android:text="18-ENE-2017"
                            android:layout_marginRight="@dimen/margin_top_init"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/history_send"
                            style="@style/resaltar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@+id/history_date"
                            android:background="@drawable/rounded_draft"
                            android:text="@string/draft" />


                        <ImageButton
                            android:id="@+id/history_btn_delete"
                            android:layout_alignParentRight="true"
                            android:layout_width="@dimen/icon_size"
                            android:layout_height="@dimen/icon_size"
                            android:background="@color/colorTrasparente"
                            app:srcCompat="@drawable/ic_delete" />

                    </RelativeLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>